--- a/myweb-rc.yaml
+++ b/myweb-rc.yaml
@@ -18,6 +18,7 @@ spec:
         - containerPort: 8080
         env:
         - name: MYSQL_SERVICE_HOST
-          value: "mysql"
+          #value: "mysql"
+          value: "10.70.4.207"
         - name: "MYSQL_SERVICE_PORT"
           value: '3306'
