--- a/myweb-rc.yaml
+++ b/myweb-rc.yaml
@@ -3,7 +3,7 @@ kind: ReplicationController
 metadata:
   name: myweb
 spec:
-  replicas: 5
+  replicas: 1
   selector:
     app: myweb
   template:
@@ -17,8 +17,7 @@ spec:
         ports:
         - containerPort: 8080
         env:
-        - name: MYSQL_SERVICE_HOST
-          #value: "mysql"
-          value: "10.70.4.207"
+        #- name: MYSQL_SERVICE_HOST
+        #  value: "mysql"
         - name: "MYSQL_SERVICE_PORT"
           value: '3306'
