--- a/lnmp/docker-template/nginx/conf.d/rock-mongo.conf
+++ b/lnmp/docker-template/nginx/conf.d/rock-mongo.conf
@@ -1,11 +1,11 @@
 server {
-	listen       10071;
-	listen       [::]:10071 ipv6only=on;
+	listen       82;
+	listen       [::]:82 ipv6only=on;
 	server_name localhost;
-	root /code/rockmongo-master;
+	root /code/rock;
 	index index.php;
-	access_log  /logs/game/rock_access.log  main;
-	error_log  /logs/game/rock_error.log;
+	access_log  /logs/rock_access.log  main;
+	error_log  /logs/rock_error.log;
     location / {
             if (!-f $request_filename){
                     rewrite ^.*$ /index.php last;
