--- a/lnmp/docker-template/nginx/conf.d/game.conf
+++ b/lnmp/docker-template/nginx/conf.d/game.conf
@@ -1,11 +1,11 @@
 server {
-	listen       10070;
-	listen       [::]:10070 ipv6only=on;
+	listen       80;
+	listen       [::]:80 ipv6only=on;
 	server_name localhost;
-	root /code/gameserver;
+	root /code/game;
 	index index.php;
-	access_log  /logs/game/game_access.log  main;
-	error_log  /logs/game/game_error.log;
+	access_log  /logs/game_access.log  main;
+	error_log  /logs/game_error.log;
     location / {
             if (!-f $request_filename){
                     rewrite ^.*$ /index.php last;
