--- a/lnmp/docker-template/nginx/conf.d/manage.conf
+++ b/lnmp/docker-template/nginx/conf.d/manage.conf
@@ -1,18 +1,18 @@
 server {
-	listen       10072;
-	listen       [::]:10072 ipv6only=on;
+	listen       81;
+	listen       [::]:81 ipv6only=on;
 	server_name localhost;
 	root /code/manage;
 	index login.html;
-	access_log  /logs/game/manage_access.log  main;
-	error_log  /logs/game/manage_error.log;
+	access_log  /logs/manage_access.log  main;
+	error_log  /logs/manage_error.log;
 	location / {
             if (!-f $request_filename){
                     rewrite ^.*$ /login.html last;
             }
     }
 	location ~^/(site|manage)/ {
-            proxy_pass http://10.70.4.207:10070;
+            proxy_pass http://localhost:10070;
             proxy_set_header Host $proxy_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
