--- a/game/redis/redis-deployment-7478.yaml
+++ b/game/redis/redis-deployment-7478.yaml
@@ -16,7 +16,7 @@ spec:
       - name: redis-7478
         image: redis:5.0
         volumeMounts:
-        - mountPath: /usr/local/etc/redis/redis.conf
+        - mountPath: /usr/local/etc/redis
           name: redis-conf
         - mountPath: /data
           name: redis-pvc-7478
