--- a/game/nginx/nginx-php-deployment.yaml
+++ b/game/nginx/nginx-php-deployment.yaml
@@ -163,13 +163,13 @@ spec:
           name: nginx-conf-d-rock-mongo-conf
       - name: php-rock-mongo-code-path
         hostPath:
-          path: ../rockmongo-master
+          path: /data/cuser00/wwww/igoal3_server/rockmongo-master
       - name: php-game-code-path
         hostPath:
-          path: ../gameserver
+          path:  /data/cuser00/wwww/igoal3_server/gameserver
       - name: php-manage-code-path
         hostPath:
-          path: ../manage
+          path: /data/cuser00/wwww/igoal3_server/manage
       - name: log-normal-path
         hostPath:
           path: /data/cuser00/var/log
