--- a/game/nginx/nginx-php-deployment.yaml
+++ b/game/nginx/nginx-php-deployment.yaml
@@ -60,19 +60,24 @@ spec:
           readOnly: true
         
         - name: nginx-nginx-conf
-          mountPath: /etc/nginx
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
           readOnly: true
         - name: nginx-server-conf
-          mountPath: /etc/nginx
+          mountPath: /etc/nginx/server.conf
+          subPath: server.conf
           readOnly: true
         - name: nginx-fcgi-conf
-          mountPath: /etc/nginx
+          mountPath: /etc/nginx/fcgi.conf
+          subPath: fcgi.conf
           readOnly: true
         - name: nginx-conf-d-upstream-php-conf
-          mountPath: /etc/nginx/conf.d
+          mountPath: /etc/nginx/conf.d/upstream_php-fpm.conf
+          subPath: upstream_php-fpm.conf
           readOnly: true
         - name: nginx-conf-d-manage-conf
-          mountPath: /etc/nginx/conf.d
+          mountPath: /etc/nginx/conf.d/manage.conf
+          subPath: manage.conf
           readOnly: true
         - mountPath: /logs
           name: log-normal-path
@@ -88,19 +93,24 @@ spec:
           readOnly: true
         
         - name: nginx-nginx-conf
-          mountPath: /etc/nginx
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
           readOnly: true
         - name: nginx-server-conf
-          mountPath: /etc/nginx
+          mountPath: /etc/nginx/server.conf
+          subPath: server.conf
           readOnly: true
         - name: nginx-fcgi-conf
-          mountPath: /etc/nginx
+          mountPath: /etc/nginx/fcgi.conf
+          subPath: fcgi.conf
           readOnly: true
         - name: nginx-conf-d-upstream-php-conf
-          mountPath: /etc/nginx/conf.d
+          mountPath: /etc/nginx/conf.d/upstream_php-fpm.conf
+          subPath: upstream_php-fpm.conf
           readOnly: true
         - name: nginx-conf-d-rock-mongo-conf
-          mountPath: /etc/nginx/conf.d
+          mountPath: /etc/nginx/conf.d/rock-mongo.conf
+          subPath: rock-mongo.conf
           readOnly: true
         - mountPath: /logs
           name: log-normal-path
@@ -115,22 +125,6 @@ spec:
         volumeMounts:
         - mountPath: /etc/localtime
           name: time
-          readOnly: true
-        
-        - mountPath: /etc/nginx
-          name: nginx-nginx-conf
-          readOnly: true
-        - name: nginx-server-conf
-          mountPath: /etc/nginx/server.conf
-          readOnly: true
-        - name: nginx-fcgi-conf
-          mountPath: /etc/nginx
-          readOnly: true
-        - name: nginx-conf-d-upstream-php-conf
-          mountPath: /etc/nginx/conf.d
-          readOnly: true
-        - name: nginx-conf-d-manage-conf
-          mountPath: /etc/nginx/conf.d
           readOnly: true
         - mountPath: /code/game
           name: php-game-code-path
