--- a/game/nginx/nginx-php-deployment.yaml
+++ b/game/nginx/nginx-php-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       # nginx 启动game的container
       - name: nginx-game
         image: nginx:latest
-        command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
+        #command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
         ports:
         - containerPort: 80
         volumeMounts:
@@ -53,7 +53,7 @@ spec:
       # nginx中启动manager的container
       - name: nginx-manage
         image: nginx:latest
-        command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
+        #command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
         ports:
         - containerPort: 81
         volumeMounts:
@@ -87,7 +87,7 @@ spec:
       # nginx中启动rockmong的container
       - name: nginx-rock-mongo
         image: nginx:latest
-        command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
+        #command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
         ports:
         - containerPort: 82
         volumeMounts:
@@ -123,7 +123,7 @@ spec:
         image: registry.cn-hangzhou.aliyuncs.com/sandstone/php:v-game-1.0.0
         #imagePullPolicy: Always
         imagePullPolicy: IfNotPresent
-        command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
+        #command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
         ports:
         - containerPort: 9000
         volumeMounts:
