--- a/aliyun-docker-rep/nginx/Dockerfile
+++ b/aliyun-docker-rep/nginx/Dockerfile
@@ -1,2 +1,4 @@
 FROM nginx:latest
-RUN apt-get update && apt-get install -y procps net-tools vim
+
+RUN sed -i s@/deb.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list 
+RUN apt-get clean && apt-get update && apt-get install -y procps net-tools vim
