--- a/game/nginx/nginx-php-deployment.yaml
+++ b/game/nginx/nginx-php-deployment.yaml
@@ -44,8 +44,8 @@ spec:
           subPath: upstream_php-fpm.conf
           readOnly: true
         - name: nginx-conf-d-game-conf
-          mountPath: /etc/nginx/conf.d/default.conf
-          subPath: default.conf
+          mountPath: /etc/nginx/conf.d/game.conf
+          subPath: game.conf
           readOnly: true
         - mountPath: /logs
           name: log-normal-path
@@ -78,8 +78,8 @@ spec:
           subPath: upstream_php-fpm.conf
           readOnly: true
         - name: nginx-conf-d-manage-conf
-          mountPath: /etc/nginx/conf.d/default.conf
-          subPath: default.conf
+          mountPath: /etc/nginx/conf.d/manage.conf
+          subPath: manage.conf
           readOnly: true
         - mountPath: /logs
           name: log-normal-path
@@ -112,8 +112,8 @@ spec:
           subPath: upstream_php-fpm.conf
           readOnly: true
         - name: nginx-conf-d-rock-mongo-conf
-          mountPath: /etc/nginx/conf.d/default.conf
-          subPath: default.conf
+          mountPath: /etc/nginx/conf.d/rock-mongo.conf
+          subPath: rock-mongo.conf
           readOnly: true
         - mountPath: /logs
           name: log-normal-path
@@ -123,7 +123,6 @@ spec:
         image: registry.cn-hangzhou.aliyuncs.com/sandstone/php:v-game-1.0.0
         #imagePullPolicy: Always
         imagePullPolicy: IfNotPresent
-        #command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
         ports:
         - containerPort: 9000
         volumeMounts:
