--- a/game/nginx/nginx-php-deployment-multi.yaml
+++ b/game/nginx/nginx-php-deployment-multi.yaml
@@ -129,12 +129,8 @@ spec:
         - mountPath: /etc/localtime
           name: time
           readOnly: true
-        - mountPath: /code/game
-          name: php-game-code-path
-        - mountPath: /code/rock
-          name: php-rock-mongo-code-path
-        - mountPath: /code/manage
-          name: php-manage-code-path
+        - mountPath: /code
+          name: php-code
         - mountPath: /logs
           name: log-normal-path
           
@@ -163,7 +159,7 @@ spec:
       - name: nginx-conf-d-rock-mongo-conf
         configMap:
           name: nginx-conf-d-rock-mongo-conf
-      - name: php-rock-mongo-code-path
+      - name: php-code
         hostPath:
           path: /data/cuser00/www/igoal3_server/rockmongo-master
       - name: php-game-code-path
