--- a/game/nginx/nginx-php-deployment.yaml
+++ b/game/nginx/nginx-php-deployment.yaml
@@ -26,34 +26,12 @@ spec:
         - mountPath: /etc/localtime
           name: time
           readOnly: true
-        
-        - name: nginx-nginx-conf
-          mountPath: /etc/nginx/nginx.conf
-          subPath: nginx.conf
+
+        - mountPath: /etc/nginx/conf.d
+          name: server-game-config
           readOnly: true
-        - name: nginx-server-conf
-          mountPath: /etc/nginx/server.conf
-          subPath: server.conf
-          readOnly: true
-        - name: nginx-fcgi-conf
-          mountPath: /etc/nginx/fcgi.conf
-          subPath: fcgi.conf
-          readOnly: true
-        - name: nginx-conf-d-upstream-php-conf
-          mountPath: /etc/nginx/conf.d/upstream_php-fpm.conf
-          subPath: upstream_php-fpm.conf
-          readOnly: true
-        - name: nginx-conf-d-game-conf
-          mountPath: /etc/nginx/conf.d/game.conf
-          subPath: game.conf
-          readOnly: true
-        - name: nginx-conf-d-manage-conf
-          mountPath: /etc/nginx/conf.d/manage.conf
-          subPath: manage.conf
-          readOnly: true
-        - name: nginx-conf-d-rock-mongo-conf
-          mountPath: /etc/nginx/conf.d/rock-mongo.conf
-          subPath: rock-mongo.conf
+        - mountPath: /etc/nginx
+          name: nginx-base-config
           readOnly: true
         - mountPath: /logs
           name: log-normal-path
@@ -77,32 +55,13 @@ spec:
           name: php-manage-code-path
         - mountPath: /logs
           name: log-normal-path
+        - mountPath: /code/game/application/lib/config
+          name: server-game-config
           
       volumes:
       - name: time
         hostPath:
           path: /etc/localtime
-      - name: nginx-server-conf
-        configMap:
-          name: nginx-server-conf
-      - name: nginx-nginx-conf
-        configMap:
-          name: nginx-nginx-conf
-      - name: nginx-fcgi-conf
-        configMap:
-          name: nginx-fcgi-conf
-      - name: nginx-conf-d-upstream-php-conf
-        configMap:
-          name: nginx-conf-d-upstream-php-conf
-      - name: nginx-conf-d-game-conf
-        configMap:
-          name: nginx-conf-d-game-conf
-      - name: nginx-conf-d-manage-conf
-        configMap:
-          name: nginx-conf-d-manage-conf
-      - name: nginx-conf-d-rock-mongo-conf
-        configMap:
-          name: nginx-conf-d-rock-mongo-conf
       - name: php-rock-mongo-code-path
         hostPath:
           path: /data/cuser00/www/igoal3_server/rockmongo-master
@@ -115,3 +74,13 @@ spec:
       - name: log-normal-path
         hostPath:
           path: /data/cuser00/var/log
+      - name: server-game-config
+        configMap:
+          name: server-game-config
+      - name: nginx-base-config
+        configMap:
+          name: nginx-base-config
+      - name: nginx-game-config
+        configMap:
+          name: nginx-game-config
+
