--- a/game/nginx/conf/server.conf
+++ b/game/nginx/conf/server.conf
@@ -23,13 +23,13 @@ location ~ .*\.php$ {
 
 location ~ .*\.(gif|jpg|png|bmp|swf|ico)$ {
     expires     30d;
-    access_log   media_access.log;
+    access_log   /logs/media_access.log;
 }
 
 
 location ~ .*\.(flv|mp4|mov)$ {
     expires      30d;
-    access_log   media_access.log;
+    access_log   /logs/media_access.log;
 }
 
 
