--- a/game/nginx/conf/conf.d/game.conf
+++ b/game/nginx/conf/conf.d/game.conf
@@ -2,7 +2,7 @@ server {
 	listen       80;
 	listen       [::]:80 ipv6only=on;
 	server_name localhost;
-	root /code/game;
+	root /code/gameserver;
 	index index.php;
 	access_log  /logs/game_access.log  main;
 	error_log  /logs/game_error.log;
