--- a/game/nginx/conf/conf.d/rock-mongo.conf
+++ b/game/nginx/conf/conf.d/rock-mongo.conf
@@ -2,7 +2,7 @@ server {
 	listen       82;
 	listen       [::]:82 ipv6only=on;
 	server_name localhost;
-	root /code/rock;
+	root /code/rockmongo-master;
 	index index.php;
 	access_log  /logs/rock_access.log  main;
 	error_log  /logs/rock_error.log;
