--- a/game/nginx/nginx-php-deployment.yaml
+++ b/game/nginx/nginx-php-deployment.yaml
@@ -46,9 +46,9 @@ spec:
         - mountPath: /etc/localtime
           name: time
           readOnly: true
-        - mountPath: /code/game
+        - mountPath: /code/gameserver
           name: php-game-code-path
-        - mountPath: /code/rock
+        - mountPath: /code/rockmongo-master
           name: php-rock-mongo-code-path
         - mountPath: /code/manage
           name: php-manage-code-path
