--- a/game/redis/redis-deployment-7478.yaml
+++ b/game/redis/redis-deployment-7478.yaml
@@ -18,6 +18,8 @@ spec:
         volumeMounts:
         - mountPath: /usr/local/etc/redis
           name: redis-conf
+        - mountPath: /logs
+          name: redis-pvc-7478
         - mountPath: /data
           name: redis-pvc-7478
         command:
