--- a/game/redis/redis-deployment-7478.yaml
+++ b/game/redis/redis-deployment-7478.yaml
@@ -18,10 +18,13 @@ spec:
         volumeMounts:
         - mountPath: /usr/local/etc/redis
           name: redis-conf
+          subPath: redis.conf
         - mountPath: /logs
           name: redis-pvc-7478
+          subPath: /redis/logs
         - mountPath: /data
           name: redis-pvc-7478
+          subPath: /redis/data
         command:
           - "redis-server"
         args:
