--- a/game/redis/redis-deployment-7478.yaml
+++ b/game/redis/redis-deployment-7478.yaml
@@ -21,10 +21,10 @@ spec:
           subPath: redis.conf
         - mountPath: /logs
           name: redis-pvc-7478
-          subPath: /redis/logs
+          subPath: ./redis/logs
         - mountPath: /data
           name: redis-pvc-7478
-          subPath: /redis/data
+          subPath: ./redis/data
         command:
           - "redis-server"
         args:
