--- a/game/mongo/mongo-svc.yaml
+++ b/game/mongo/mongo-svc.yaml
@@ -1,14 +1,11 @@
 kind: Service
 apiVersion: v1
 metadata:
-  labels:
-    name: mongodb
   name: mongodb
 spec:
   type: NodePort
   ports:
-  - name: mongodb
-    port: 27017
+  - port: 27017
     targetPort: 27017
   selector:
     name: mongodb
