--- a/game/redis/redis-deployment-7478.yaml
+++ b/game/redis/redis-deployment-7478.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis-7478
+  name: deployment-redis-7478
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: redis-7478
+      name: redis
   template:
     metadata:
       labels:
-        name: redis-7478
+        name: redis
     spec:
       containers:
-      - name: redis-7478
+      - name: container-redis-7478
         image: redis:5.0
         volumeMounts:
         - mountPath: /usr/local/etc/redis
