--- a/game/redis/redis-svc.yaml
+++ b/game/redis/redis-svc.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
- name: redis-service
- labels:
-   name: redis-service
+ name: svc-redis
 spec:
- type: NodePort   # 如果需要集群外部访问,这里改为NodePort
+ type: NodePort
  ports:
  - port: 7478
    protocol: TCP
    targetPort: 7478
-   name: redis-7478
  selector:
-   name: redis-7478
+   name: redis
