--- a/game/nginx/conf/conf.d/manage.conf
+++ b/game/nginx/conf/conf.d/manage.conf
@@ -3,19 +3,13 @@ server {
 	listen       [::]:81 ipv6only=on;
 	server_name localhost;
 	root /code/manage;
-	index login.html;
+	index login.php;
 	access_log  /logs/manage_access.log  main;
 	error_log  /logs/manage_error.log;
 	location / {
-            if (!-f $request_filename){
-                    rewrite ^.*$ /login.html last;
-            }
+        if (!-f $request_filename){
+             rewrite ^.*$ /index.php last;
+        }
     }
-	location ~^/(site|manage)/ {
-            proxy_pass http://localhost:10070;
-            proxy_set_header Host $proxy_host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-	include server.conf;
+    include server.conf;
 }
