--- a/game/nginx/nginx-php-deployment.yaml
+++ b/game/nginx/nginx-php-deployment.yaml
@@ -69,8 +69,11 @@ spec:
         image: registry.cn-hangzhou.aliyuncs.com/sandstone/php:v-game-1.0.0
         #imagePullPolicy: Always
         imagePullPolicy: IfNotPresent
-        command: [ "/bin/bash"]
-        args: [ "sh /code/gameserver/cron/start_cron.sh start /logs/cron" ]
+        command: [ "/bin/sh"]
+        args: 
+          - /code/gameserver/cron/start_cron.sh
+          - start
+          - /logs/cron
         volumeMounts:
         - mountPath: /etc/localtime
           name: time
