update nginx config

--- a/game/nginx/nginx-svc.yaml
+++ b/game/nginx/nginx-svc.yaml
@@ -3,22 +3,19 @@ kind: Service
 metadata:
   name: svc-nginx
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - name: nginx-game
-    port: 80
+    port: 10080
     protocol: TCP
     targetPort: 80
-    nodePort: 30080
   - name: nginx-manage
-    port: 81
+    port: 10081
     protocol: TCP
     targetPort: 81
-    nodePort: 30081
   - name: nginx-rock-mongo
-    port: 82
+    port: 10082
     protocol: TCP
     targetPort: 82
-    nodePort: 30082
   selector:
     app: nginx-php
