--- a/infra/traefik/traefik.yaml
+++ b/infra/traefik/traefik.yaml
@@ -1,5 +1,5 @@
-apiVersion: extensions/v1beta1
-kind: DaemonSet
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: traefik-ingress-lb
   namespace: kube-system
