--- a/infra/traefik/ui.yaml
+++ b/infra/traefik/ui.yaml
@@ -11,7 +11,7 @@ spec:
     port: 80
     targetPort: 8580
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: traefik-web-ui
