--- a/aliyun-docker-rep/python3/Dockerfile
+++ b/aliyun-docker-rep/python3/Dockerfile
@@ -1,3 +1,4 @@
 FROM rackspacedot/python37:latest
 
-RUN pip install openpyxl xlrd xlwt
+RUN pip install openpyxl xlrd xlwt \ 
+&& svn info svn://122.14.46.103/server3/commonTables/commonTables_master --username bin.wang  --password bornfish  --non-interactive
