--- a/aliyun-docker-rep/python3/Dockerfile
+++ b/aliyun-docker-rep/python3/Dockerfile
@@ -1,4 +1,11 @@
 FROM rackspacedot/python37:latest
 
-RUN pip install openpyxl xlrd xlwt \ 
-&& svn info svn://122.14.46.103/server3/commonTables/commonTables_master --username bin.wang  --password bornfish  --non-interactive
+RUN sed -i s@/deb.debian.org/@/mirrors.aliyun.com/@g /etc/apt/sources.list \
+&& apt-get clean && apt-get update
+
+RUN apt-get install -y libsasl2-modules-ldap libz-dev \
+&& pip3 install xlrd openpyxl  xlwt
+
+COPY ./servers /root/.subversion/servers
+
+RUN svn info svn://122.14.46.103/server3/commonTables/commonTables_master --username bin.wang  --password bornfish  --non-interactive
