--- a/aliyun-docker-rep/python3/Dockerfile
+++ b/aliyun-docker-rep/python3/Dockerfile
@@ -9,3 +9,6 @@ RUN apt-get install -y libsasl2-modules-ldap libz-dev \
 COPY ./servers /root/.subversion/servers
 
 RUN svn info svn://122.14.46.103/server3/commonTables/commonTables_master --username bin.wang  --password bornfish  --non-interactive
+
+RUN apt-get install -y locales locales-all 
+RUN pip3 install xlrd==1.2.0
