--- a/lucifer/mysql.yaml
+++ b/lucifer/mysql.yaml
@@ -1,49 +1,53 @@
-apiVersion: apps/v1  
-
-metadata:  
-
-  name: mysql  
-
-spec:  
-
-  selector:  
-
-    matchLabels:  
-
-      app: mysql  
-
-  template:  
-
-    metadata:  
-
-      labels:  
-
-        app: mysql  
-
-    spec:  
-
-      containers:  
-
-      - image: mysql:8.0.22  
-
-        name: mysql  
-
-        env:         
-
-        - name: MYSQL_ROOT_PASSWORD  
-
-          value: 1234  
-
-        volumeMounts:  
-
-        - name: mysql-storage  
-
-          mountPath: var/lib/mysql         
-
-      volumes:  
-
-      - name: mysql-storage  
-
-        persistentVolumeClaim:  
-
-         claimName: mysql-pvc      
+kind: List
+apiVersion: v1
+items:
+  - apiVersion: v1
+    kind: ConfigMap
+    metadata:
+      name: mysql-config
+      namespace: lucifer
+    data:
+      mysqld.cnf: |-
+        [mysqld]
+        pid-file	= /var/run/mysqld/mysqld.pid
+        socket      = /var/run/mysqld/mysqld.sock
+        datadir	= /var/lib/mysql
+        symbolic-links = 0
+        max_allowed_packet = 50M
+        character_set_server = utf8
+        collation_server = utf8_general_ci
+        group_concat_max_len = 102400
+        [client]
+        default_character_set = utf8
+  - apiVersion: apps/v1
+    metadata:
+      name: mysql
+      namespace: lucifer
+    spec:
+      selector:
+        matchLabels:
+          app: mysql
+      template:
+        metadata:
+          labels:
+            app: mysql
+        spec:
+          containers:
+          - image: mysql:8.0.22
+            imagePullPolicy: IfNotPresent
+            name: mysql
+            env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: 123456
+            volumeMounts:
+            - name: data-volume
+              mountPath: /var/lib/mysql
+            - name: config-volmue
+              mountPath: /etc/mysql/mysql.conf.d/
+          volumes:
+          - name: data-volume
+            hostPath:
+              path: /home/sandstone/workpath/data/mysql
+          - name: config-volmue
+            configMap:
+              name: mysql-config
